// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Label /> hidden renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  hidden={true}
  textStyle="label"
>
  Hello world
</StyledComponent>
`;

exports[`<Label /> renders correctly 1`] = `
<StyledComponent
  forwardedRef={null}
  hidden={false}
  textStyle="label"
>
  Hello world
</StyledComponent>
`;
